--- a/INSTALL
+++ b/INSTALL
@@ -17,6 +17,18 @@ usually /usr/local/include, with an appropriate name.  I use
 
 Similarly, the *contents* of the 'lib' directory should go into your library
 directory (usually /usr/local/lib).  Once you've done that, run 'ldconfig',
-then make a symlink from LIBDIR/libnoise.so to LIBDIR/libnoise.so.0.
+then make a symlink from LIBDIR/libnoise.so to LIBDIR/libnoise.so.0.  I use:
+
+  cp lib/* /usr/local/lib
+  ldconfig
+  ln -s /usr/local/lib/libnoise.so.0 /usr/local/lib/libnoise.so
+
+At this point, you should be able to include libnoise in your projects using
+
+  #include <noise/noise.h>
+
+and
+
+  g++ ...options... -lnoise
 
 At some point we'll automate this process.
